# pis

./: .gitignore  main.py  pyproject.toml
configs/: config.yaml
configs/datamodule/: brownian.yaml  datamodule.yaml  difficult_2d.yaml  difficult_gaussian.yaml  funnel.yaml  ion.yaml  lgcp.yaml  sonar.yaml
configs/experiment/: brownian.yaml  difficult_2d.yaml  difficult_gaussian.yaml  example_simple.yaml  funnel.yaml  ion.yaml  lgcp.yaml  ou.yaml  ps.yaml  sonar.yaml
configs/logger/: wandb.yaml
configs/model/: base.yaml  base_old.yaml
configs/server/: base.yaml  ziz.yaml  ziz6.yaml
configs/trainer/: debug.yaml  default.yaml  test.yaml
src/: train.py
src/callbacks/: metric_cb.py  ou_cb.py
src/datamodules/: blank_datamodule.py
src/datamodules/datasets/: base_set.py  brownian.py  cox.py  difficult_2d.py  difficult_gaussian.py  funnel.py  log_reg.py  ou.py  ps.py
src/logger/: wandb_logger.py
src/models/: __init__.py  base_model.py  loss.py  pis_nn.py
src/networks/: mlp.py  time_conder.py
src/utils/: jamtorch_utils.py  lht_utils.py  sampling.py
src/viz/: ou.py  ps.py
